<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/about"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/name"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/studentnum"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/opsc7312"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/disd3"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/tvAboutQ1"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:textStyle="italic"
        android:text="@string/tvAboutQ2"
        android:layout_marginBottom="15dp"/>


</LinearLayout>
</ScrollView>