<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shareAContact"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textStyle="bold"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/tvHeading"/>

    <AutoCompleteTextView
        android:id="@+id/txtContactToSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSend"
        android:hint="Type contact to send"
        android:drawableRight="@drawable/ic_action_search"/>

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textStyle="bold"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtContactToSend"/>

    <AutoCompleteTextView
        android:id="@+id/txtContactToReceive"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTo"
        android:hint="Type recipient name"
        android:drawableRight="@drawable/ic_action_search"/>


    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSend"
        android:layout_below="@+id/txtContactToReceive"
        android:enabled="false"
        android:onClick="onClickSendMessage"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExit"
        android:layout_below="@+id/txtContactToReceive"
        android:layout_toRightOf="@+id/btnSend"
        android:onClick="onClickExit"/>


</RelativeLayout>
